# agentic-prediction-copilot

./: .gitignore  LICENSE  PLAN.md  main.py  pyproject.toml
.gemini/skills/ai-builder-curriculum/: SKILL.md
.gemini/skills/ai-builder-curriculum/references/: mastered.md  quiz_bank.md
backend/: agent.py  main.py  pyproject.toml  state.py
backend/app/: agent.py  config.py  database.py  dependencies.py  main.py  models.py  state.py
frontend/: package-lock.json  package.json  skills-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/history/[id]/: page.tsx
