[project]
name = "agentic-prediction-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=48.0.0",
    "fastapi[standard]>=0.136.1",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.38",
    "sse-starlette>=3.4.2",
    "tavily-python>=0.7.24",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[tool.pyright]
extraPaths = ["."]

